@@ -19,6 +19,11 @@ EXTRA_DIST =						\
 DISTCLEANFILES =					\
 	$(NULL)
 
+if ENABLE_XIM
+INCLUDES += -I$(top_srcdir)/backends/xim -DENABLE_XIM
+LIBS += $(top_builddir)/backends/xim/libimsettings-xim.la
+DEPS += $(top_builddir)/backends/xim/libimsettings-xim.la
+endif
 
 ##
 # Local definitions
